--- a/main.css
+++ b/main.css
@@ -473,7 +473,6 @@ margin-right: 150px; */
     color: #002836; */
 }
 
-
 .Hoteliers {
     /* height: 58px; */
     font-family: Roboto;
@@ -506,9 +505,7 @@ margin-right: 150px; */
 }
 
 .enhance {
-  
     overflow: hidden;
-    
 }
 
 .enhance-wrapper {
@@ -638,7 +635,6 @@ margin-right: 150px; */
 }
 
 .better h3 {
-   
     font-family: Roboto;
     font-size: 34px;
     font-weight: 300;
@@ -694,6 +690,15 @@ margin-right: 150px; */
     margin-bottom: 33px;
 }
 
+.forbes .forbes-logo .right {
+    max-width: 449px;
+}
+
+.forbes .forbes-logo img {
+    padding-left: 12px;
+    padding-top: 35px;
+}
+
 .forbes-logo-text {
     width: 388px;
     height: 162px;
@@ -705,10 +710,12 @@ margin-right: 150px; */
     line-height: 1.38;
     letter-spacing: 0.1px;
     color: #ffffff;
+    padding-left: 12px;
 }
 
 .forbes .gerard-text {
     padding-top: 12px;
+    padding-left: 12px;
     width: 593px;
     height: 33px;
     font-family: Roboto;
@@ -721,8 +728,425 @@ margin-right: 150px; */
     color: #ffffff;
 }
 
-.award-list {
+.forbes .right .award-img {
+    padding-top: 66px;
+}
+
+.forbes .right .award-list {
     width: 375px;
     color: white;
-    /* padding: 12px; */
+    padding-top: 95px;
+    padding-left: 24px;
+}
+
+.row {
+    /* background-image: url(https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/proof-image-gth-crop.jpg?t=1529338122959); */
+    background-image: url();
+    /* background-size: contain; */
+    background-repeat: no-repeat;
+    background-position: right;
+    /* background-size: cover; */
+    background-color: #f5f6f7;
+    overflow: hidden;
+}
+
+.main {
+    padding-top: 85px;
+}
+
+.main-wrapper {
+    max-width: 1208px;
+    margin: 0 auto;
+    /* padding: 0 40px; */
+}
+
+.suite-text {
+    padding-top: 10px;
+}
+
+.header-text {
+    font-family: Roboto;
+    font-size: 34px;
+    font-weight: 300;
+    line-height: 1.53;
+    letter-spacing: 0.1px;
+    color: #002836;
+}
+
+.content {
+    margin-top: 50px;
+}
+
+.content-wrapper {
+    max-width: 1208px;
+    margin: 0 auto;
+}
+
+.left {
+    float: left;
+}
+
+content .right {
+    float: right;
+}
+
+content .right img {
+    vertical-align: top;
+}
+
+.col-1 {
+    max-width: 305px;
+}
+
+.col-2 {
+    padding-left: 80px;
+    max-width: 305px;
+}
+
+.col-3 {
+    padding-left: 80px;
+    max-width: 305px;
+}
+
+.details-numbers {
+    font-family: 'Roboto', sans-serif !important;
+    font-size: 80px;
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: -0.1px;
+    color: #019bb3;
+}
+
+.details-tagline {
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: normal;
+    color: #019bb3;
+    margin-bottom: 20px;
+}
+
+.details-description {
+    font-size: 16px;
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: normal;
+    color: #002836;
+}
+
+.testi-content {
+    margin-top: 80px;
+    overflow: hidden;
+}
+
+.testi-content-wrapper {
+    max-width: 1208px;
+    margin: 0 auto;
+}
+
+.slider-testi-content {
+    /* border: 1px solid black; */
+    background-image: url(testimonial-3@2x.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    /* background-color: #f5f6f7; */
+    overflow: hidden;
+    margin: 10px 0px !important;
+    /* height: 0px; */
+    /* height: auto; 
+    width: auto;  */
+    height: 284px;
+    width: 302px;
+    /* background-size: 271px 300px; */
+    background-size: 100%;
+    padding-top: 56px;
+    padding-left: 50px;
+    /* padding: 56px 50px */
+}
+
+.slider-testi-content:nth-child(2) {
+    /* margin-left: 26px !important; */
+    /* justify-content: space-around; */
+    background-image: url(https://cdn2.hubspot.net/hubfs/1799160/2018Redesign/Home/Images/201806/testimonial-2-1440.png);
+}
+
+.slider-testi-content:nth-child(3) {
+    /* margin-left: 26px !important; */
+    background-image: url(https://cdn2.hubspot.net/hubfs/1799160/2018Redesign/Home/Images/201806/testimonial-3-1440.png);
+}
+
+.slider-testi-content .slider-quote {
+    max-width: 27px;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.slider-testi-content .slider-quote-given {
+    font-size: 16px;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: normal;
+    color: #000000;
+    display: inline;
+}
+
+.slider-testi-content .slider-quote-giver {
+    font-size: 17px;
+    font-weight: 400;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.65;
+    letter-spacing: normal;
+    color: #000000;
+}
+
+.slider-testi-content .slider-hotel-name {
+    font-size: 17px;
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.65;
+    letter-spacing: normal;
+    color: #000000;
+}
+
+.schedule-main {
+    padding-top: 85px;
+}
+
+.schedule-main-wrapper {
+    max-width: 1208px;
+    margin: 0 auto;
+    /* padding: 0 40px; */
+}
+
+.schedule-main .cta_button {
+    cursor: pointer;
+    border-radius: 8px;
+    font-family: 'roboto', sans-serif;
+    width: 216px;
+    height: 41px;
+    border: solid 2px #fb456f;
+    background: transparent;
+    display: block;
+    border-radius: 0px;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0.5px;
+    text-align: center;
+    color: #105372;
+    text-decoration: none;
+    text-align: center;
+    text-align: center;
+    line-height: 41px;
+}
+
+.schedule-main .sch-left {
+    float: left;
+}
+
+.schedule-main .sch-right {
+    float: right;
+}
+
+.schedule-content {
+    padding-top: 86px;
+}
+
+.schedule-content-wrapper {
+    max-width: 1393px;
+    margin: 0 auto;
+    /* padding: 0 40px; */
+}
+
+/* .schedule-main-slider {
+    padding-top: 86px;
+} */
+
+.schedule-slider {
+    background-image: url(https://cdn2.hubspot.net/hubfs/1799160/2018Redesign/Website/Products/201805/Alice%20Concierge/client-box-1@3x.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    /* background-attachment: fixed; */
+    background-position: center;
+    width: 200px;
+    height: 142px;
+    margin-left: 51px;
+    display: table;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.schedule-slider .table-cell {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.schedule-slider a img {
+    padding-top: 12px;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+    width: 120px;
+    height: auto;
+    /* margin-right: auto; */
+    /* width: 40%; */
+}
+
+.aliceway-main {
+    padding-top: 214px;
+}
+
+.aliceway-main-wrapper {
+    max-width: 1208px;
+    margin: 0 auto;
+    /* padding: 0 40px; */
+}
+
+.aliceway-text {
+    padding-top: 80px;
+}
+
+.aliceway-text-wrapper {
+    max-width: 1208px;
+    margin: 0 auto;
+    /* padding: 0 40px; */
+}
+
+.aliceway-text .how-we-do-description {
+    font-size: 20px;
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.56;
+    letter-spacing: normal;
+    color: #002836;
+    margin-bottom: 44px;
+}
+
+.aliceway-text .how-we-do-description strong {
+    font-weight: bold;
+}
+
+.main-cta-button {
+    padding-top: 80px;
+}
+
+.main-cta-button-wrapper {
+    max-width: 1208px;
+    margin: 0 auto;
+}
+
+.main-cta-button img {
+    margin-top: -25px;
+    vertical-align: middle;
+}
+
+.cta_button {
+    position: relative;
+    font-weight: normal;
+    text-align: center;
+    text-decoration: none;
+    background: rgb(255, 76, 121);
+    border-radius: 4px;
+    border-width: 0px;
+    transition: all .4s ease;
+    text-shadow: none;
+    line-height: 1.5em;
+    padding: 0px 0px;
+    box-sizing: border-box;
+    border-radius: 0px;
+    font-size: 14px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: 0.5px;
+    text-align: center;
+    color: #ffffff;
+    line-height: 45px;
+    max-width: 220px;
+    width: 220px;
+    font-family: 'Roboto', sans-serif;
+    height: 45px;
+    display: inline-block;
+}
+
+footer {
+    border-top: solid 1px #019bb3;
+    padding-top: 44px;
+    /* margin-top: 87px; */
+    margin-bottom: 87px;
+}
+
+footer .footer-wrapper {
+    margin: 0 auto;
+    /* max-width: 1220px; */
+    /* max-width: 1152px; */
+    max-width: 1208px;
+}
+
+.footer-area {
+    margin-top: 31px;
+}
+
+footer .footer-area a {
+    /* width: 91.2px;
+    height: 16px; */
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: -0.1px;
+    text-align: center;
+    color: #4a4a4a;
+    padding: 12px;
+    text-decoration: none;
+}
+
+footer .app-social {
+    margin-top: 21px;
+    padding-left: 50px;
+}
+
+footer img {
+    vertical-align: middle;
+}
+
+footer .app-social-wrapper {
+    max-width: 475px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+footer .app-social .apple-logo {
+    /* float: left; */
+    width: 113px;
+    /* padding-left: 50px; */
+}
+
+footer .app-social .google-logo {
+    width: 113px;
+    padding-left: 23px;
+}
+
+footer .app-social .social-img {
+    padding-left: 118px;
+}
+
+footer .app-social .social-img a {
+    text-decoration: none
+}
+
+footer .app-social .social-img .padding-left {
+    padding-left: 18px;
 }
